# sir

./: .gitignore  Cargo.toml  config.json  last_chat_id.txt  system-prompt.txt
src/: cli.rs  config.rs  llm.rs  main.rs  types.rs
src/audio/: audio_service.rs  config.rs  microphone.rs  mod.rs  openai_stt.rs  recording.rs  voice_assistant.rs
src/chat/: displayer.rs  messages.rs  mod.rs  pipeline.rs
src/cli/: chat.rs  displayer.rs  event_processor.rs  mod.rs  runtime.rs
src/context/: context_service.rs  mod.rs  openai_embedding_model.rs
src/db/: chat_repo.rs  mod.rs
src/domain/: events.rs  json.rs  messages.rs  mod.rs  states.rs  tools.rs
src/entities/: messages.rs  mod.rs  tools.rs
src/history/: config.rs  error.rs  file_history_repo.rs  history_repo.rs  mod.rs
src/llm/: llm.rs
src/mcp/: config.rs  mod.rs  server.rs  tools_repo.rs
src/openai/: config.rs  embedding_model.rs  llm.rs  mod.rs  stt.rs  tts.rs
src/rag/: mod.rs  tools_rag.rs
src/text/: config.rs  context_service.rs  events.rs  mod.rs  openai_llm.rs  pipeline.rs
src/tools/: config.rs  mcp_server.rs  mod.rs  tool.rs  tool_stream_collector.rs  tools_repo.rs
src/tui/: events.rs  mod.rs  tui.rs
src/voice_assistant/: assistant.rs  daemons.rs  mod.rs  state.rs
