[package]
name = "sir"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.28.1"
async-trait = "0.1.88"
client = "0.1.1-beta1"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
rmcp = { version = "0.1.5", features = ["client", "transport-child-process", "transport-sse"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["fs", "io-std", "macros", "rt", "rt-multi-thread", "tokio-macros"] }
tokio-stream = "0.1.17"
