[package]
name = "sir"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-openai = "0.28.1"
cpal = "0.16.0"
dotenv = "0.15.0"
duration-str = "0.17.0"
env_logger = "0.11.8"
futures = "0.3.31"
hound = "3.5.1"
libsql = "0.9.19"
log = "0.4.27"
rmcp = { version = "0.1.5", features = ["client", "transport-child-process", "transport-sse"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple-stopwatch = "0.1.4"
simsimd = "6.5.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["fs", "full", "io-std", "macros", "rt", "rt-multi-thread", "tokio-macros"] }
tokio-stream = "0.1.17"
voice_activity_detector_silero_v5 = { version = "0.2.0-silero-v5", features = ["async"] }

[dev-dependencies]
rand = "0.9.2"
