[package]
name = "sir"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.48", features = ["derive"] }
cpal = "0.16.0"
dotenv = "0.15.0"
duration-str = "0.17.0"
env_logger = "0.11.8"
futures = "0.3.31"
hound = "3.5.1"
libsql = "0.9.19"
log = "0.4.27"
oww-rs = { git = "https://github.com/ReshetnikovPavel/oww_rs", version = "0.2.0" }
reqwest = { version = "0.12.23", features = ["multipart"] }
rmcp = { version = "0.1.5", features = ["client", "transport-child-process", "transport-sse"] }
rodio = "0.21.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simsimd = "6.5.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0" }
voice_activity_detector = { git = "https://github.com/ReshetnikovPavel/voice_activity_detector", version = "0.2.1" }

[dev-dependencies]
rand = "0.9.2"
